--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.9.4",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.54.8",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
